--- a/src/app.scss
+++ b/src/app.scss
@@ -22,3 +22,10 @@
 @import "../node_modules/bootstrap/scss/containers";
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/helpers";
+
+
+@import "../blocks/hero/block-simple-hero";
+
+@import "../blocks/block-text/simple-text-and-image";
+
+@import "../blocks/vertical/block-vertical-slider";
