--- a/src/app.scss
+++ b/src/app.scss
@@ -2,7 +2,7 @@
 @import "../node_modules/bootstrap/scss/functions";
 
 // 2. Include any default variable overrides here
-
+@import "custom";
 // 3. Include remainder of required Bootstrap stylesheets (including any separate color mode stylesheets)
 @import "../node_modules/bootstrap/scss/variables";
 @import "../node_modules/bootstrap/scss/variables-dark";
@@ -23,7 +23,7 @@
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/helpers";
 
-
+@import "elements";
 @import "../blocks/hero/block-simple-hero";
 
 @import "../blocks/block-text/simple-text-and-image";
