--- a/src/app.scss
+++ b/src/app.scss
@@ -24,6 +24,8 @@
 @import "../node_modules/bootstrap/scss/grid";
 @import "../node_modules/bootstrap/scss/helpers";
 
+@import "../node_modules/bootstrap/scss/utilities/api";
+
 @import "../node_modules/bootstrap/scss/forms";
 @import "../node_modules/bootstrap/scss/buttons";
 @import "../node_modules/bootstrap/scss/transitions";
@@ -39,3 +41,4 @@
 @import "../blocks/block-text/simple-text-and-image";
 
 @import "../blocks/vertical/block-vertical-slider";
+@import "header";
